# docmind

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inspect_db.py  main.py  mcp_config.json  pyproject.toml  requirements.txt  space_start.sh
app/: __init__.py  api.py  chain.py  ingest.py  retriever.py  ui.py
chroma_db/: .gitkeep
data/: .gitkeep
mcp_server/: __init__.py  server.py
scripts/: mcp_sse_smoke.py
